fixes linebreak in backend photop list

--- a/app/assets/stylesheets/backend/photos.css.scss
+++ b/app/assets/stylesheets/backend/photos.css.scss
@@ -2,9 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.thumblistitem {
+  margin: 0 10px 20px 10px !important;
+}
 .thumbnail {
   height: 350px;
   position: relative;
+  
 
 
   .imgstatus {
